# beeline-case

./: .gitignore  README.md  docker-compose.yml
autoDoc/: Dockerfile  generator.py  main.py
common/: __init__.py
common/ast/: pipeline.py
common/auth/: dependency.py  policy.py
common/database/: base.py  dependency.py
common/neo4j/: base.py  dependency.py
common/qdrant/: base.py  collections.py  dependency.py
common/s3/: base.py  dependency.py  download.py
common/schemas/: __init__.py  project.py  user.py
diagramParser/: main.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CodePanel.tsx  CopyButton.tsx  InputForm.tsx  MessageBubble.tsx  MessageList.tsx  chat-interface.tsx  code-block.tsx  code-panel.tsx  create-project-modal.tsx  project-card.tsx  project-charts.tsx  project-documentation.tsx  sidebar.tsx
grapth_db/: Dockerfile  create_graph.py  main.py
ingest/: Dockerfile  ingest_service.py  requirements.txt
llm_analysis/: .env  Dockerfile  requirements.txt  run_diagram.sh
llm_analysis/app/: config.py  db.py  diagram.py  main.py  models.py  parser.py  static_analyzer.py  yandex_gpt.py
llm_analysis/llm_analysis/: diagram.json  diagram.mmd  diagram_raw.json  docker-compose.yml  (+3 more)
llm_tools/: main.py  requirements.txt
model/: Dockerfile  main.py  requirements.txt
rag/: Dockerfile  rag_service.py  requirements.txt
user_service/: Dockerfile  main.py  pyproject.toml
user_service/app/: main.py
vsc_parser/: Dockerfile  code_parser.py  graph_utils.py  requirements.txt
(+19 files in other folders)
